# rpidash

./: .gitignore  Dockerfile  README.md  config.prod.yaml  config.test.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: release-package.yaml
rpidash/: __init__.py  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  database.py  models.py  routes.py  scheduled_tasks.py  system_utilization.py  test_config.yaml  utils.py
rpidash/.github/workflows/: release-package.yaml
rpidash/models/: model_manager.py  models.py
rpidash/models/tests/: test_model_manager.py  test_models.py
rpidash/services/: current_utilization.py  system_utilization.py  task_scheduler.py
rpidash/services/tests/: test_system_utilization.py  test_task_scheduler.py
rpidash/static/js/: current-utilization.js  graph.js
rpidash/static/styles/: styles.css
rpidash/templates/: dashboard.html  index.html
rpidash/tests/: test_api_views.py  test_models.py  test_scheduled_tasks.py  test_system_utilization.py  test_utils.py
rpidash/utils/: utils.py
rpidash/utils/tests/: test_utils.py
rpidash/views/: api_views.py  dash.py  dashboard.py
rpidash/views/tests/: test_api_views.py  test_dashboard.py
