[project]
name = "rpidash"
dependencies = [
    "flask",
]
version = "1.2.1"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "too-many-instance-attributes",
    "too-few-public-methods",
]
max-line-length = 79
check-quote-consistency = true

[tool.isort]
import_heading_future = "FUTURE"
import_heading_stdlib = "STDLIB"
import_heading_firstparty = "FIRST PARTY"
import_heading_thirdparty = "THIRD PARTY"
import_heading_localfolder = "LOCAL FOLDER"
multi_line_output = 3
include_trailing_comma = true